# CLIApp

./: .clang-format  ArgParser.cpp  ArgParser.h  ByteConsumer.cpp  ByteConsumer.h  ByteProducer.cpp  ByteProducer.h  CLIApp.cpp  CLIApp.h  CMakeLists.txt  CheckSumApp.cpp  CheckSumApp.h  FileReader.cpp  FileReader.h  IApp.h  README.md  ThreadPool.cpp  ThreadPool.h  WordCountApp.cpp  WordCountApp.h  main.cpp
gtests/: CMakeLists.txt  ChecksumAppTest.cpp  ChecksumAppTest.h
